--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 geoportalemrevisao filter=lfs diff=lfs merge=lfs -text
+Data/Rock_CaboVerde.js filter=lfs diff=lfs merge=lfs -text
+Data/Coral_Algae_CaboVerde.js filter=lfs diff=lfs merge=lfs -text
